--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-coverflow": "^0.2.12",
     "react-dom": "^16.3.0",
     "react-floating-button-menu": "^1.0.8",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^2.2.7",
     "react-images": "^0.5.17",
     "react-materialize": "^2.1.2",
