--- a/package.json
+++ b/package.json
@@ -3,29 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "amazon-product-api": "^0.4.4",
-    "axios": "^0.18.0",
     "google-map-react": "^0.34.0",
     "lodash": "^4.17.5",
-    "material-ui": "^0.20.0",
     "prop-types": "^15.6.1",
-    "radium": "^0.23.0",
     "react": "^16.0.0-alpha.12",
     "react-burger-menu": "^2.4.0",
-    "react-coverflow": "^0.2.12",
     "react-dom": "^16.3.0",
     "react-floating-button-menu": "^1.0.8",
-    "react-google-maps": "^9.4.5",
     "react-icons": "^2.2.7",
     "react-images": "^0.5.17",
     "react-materialize": "^2.1.2",
-    "react-mfb": "^0.6.0",
     "react-redux": "^4.4.9",
     "react-router-dom": "^4.2.2",
+    "react-router-transition": "^1.2.1",
     "react-scripts": "1.1.1",
-    "react-simpletabs": "^0.7.0",
     "react-slick": "^0.22.3",
     "react-tabs": "^2.2.1",
+    "react-telephone-input": "^4.3.4",
     "redux": "^3.7.2",
     "slick-carousel": "^1.8.1"
   },
